--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -2,6 +2,7 @@ FROM --platform=linux/amd64 ubuntu:20.04
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y tclsh
 
 ADD . /repo
 WORKDIR /repo
