Add package stage

--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -1,4 +1,4 @@
-FROM --platform=linux/amd64 ubuntu:20.04
+FROM --platform=linux/amd64 ubuntu:20.04 as builder
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential tclsh
@@ -6,3 +6,12 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential tclsh
 ADD . /repo
 WORKDIR /repo
 RUN make -j8
+
+RUN mkdir -p /deps
+RUN ldd /repo/cli | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
+
+FROM ubuntu:20.04 as package
+
+COPY --from=builder /deps /deps
+COPY --from=builder /repo/cli /repo/cli
+ENV LD_LIBRARY_PATH=/deps
