try serial build

--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -5,7 +5,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential tclsh
 
 COPY . /repo
 WORKDIR /repo
-RUN make -j8
+RUN make
 
 FROM ubuntu:20.04 as package
 COPY --from=builder /repo/cli /
